k8s-manual-testing/web-servers/nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  namespace: satish-kaushik-t45d6
  annotations:
    lbipam.cilium.io/ips: "188.68.62.169"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
