k8s-manual-testing/web-servers/nginx/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-tenant
  name: nginx-ingress
  namespace: satish-kaushik-t45d6
spec:
  ingressClassName: nginx-satish
  rules:
  - host: nginx.padmini.systems
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.padmini.systems
    secretName: nginx-cert
